# harvard-pin-hill

./: .gitignore  DEPLOYMENT-UV.md  DEPLOYMENT.md  Dockerfile  deploy-uv.sh  main.py  pyproject.toml
.github/workflows/: test.yml
deployment/: README.md
deployment/docker/: deploy.sh  docker-compose.yml
deployment/uv/: DEPLOYMENT.md  deploy.sh
static/css/: styles.css
static/js/: script.js
templates/: base.html  history.html  index.html  trails.html
tests/: conftest.py  test_main.py
